# PACT

./: .dev.vars.example  .gitignore  DEMO_SCRIPT.md  HANDOFF.md  LICENSE  README.md  SUBMISSION.md  install.sh  package-lock.json  package.json  pact-engine.js  tsconfig.json  tsup.config.ts  wrangler.jsonc
.claude/commands/: pact-rehydrate.md  pact.md
.pact/: hook.js  start-hook.js  stop-hook.js
benchmarks/: chart-compare.mjs  chart-scaling.mjs  chart.mjs  compaction-benchmark.mjs  compare.mjs  parse-session.mjs  run.mjs  runner.ts
benchmarks/tasks/: 001-auth-refactor.json  0010-task.json  002-api-debug.json  002-race-condition-debug.json  003-feature-search.json  003-test-coverage.json  004-perf-optimization.json  004-task.json  005-migration-postgres.json  005-task.json  006-security-audit.json  006-task.json  007-api-integration.json  007-task.json  008-task.json  008-testing-coverage.json  009-bug-memory-leak.json  009-task.json  (+3 more)
docs/: CNAME  VIDEO_SCRIPT.md  index.html
meta/: PITCH.md
native/: PACTProgress  PACTProgress.swift  pact-video.c
python/: README.md  pyproject.toml
python/pact_cc/: __init__.py
python/tests/: test_pact_cc.py
scripts/: tune-prompt.mjs
src/: cli.ts  compaction.ts  compress.ts  engine.test.ts  extract.test.ts  extract.ts  hook.test.ts  hook.ts  index.ts  inject.test.ts  inject.ts  install.ts  pack.ts  rehydrate.ts  session.test.ts  session.ts  setup.ts
visuals/: 01-slideshow.md  02-funnel-animation.md  03-scaling-race.md  04-hook-terminal.md  05-savings-odometer.md  06-architecture-pipeline.md  DELIVERY.md  README.md
(+15 files in other folders)
