[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pact-cc"
version = "1.0.0"
description = "Semantic compression middleware for Claude Code agents. 35x token reduction."
readme = "../README.md"
license = { file = "../LICENSE" }
requires-python = ">=3.9"
keywords = ["claude", "claude-code", "compression", "ai", "agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/hmatrades/PACT"

[tool.hatch.build.targets.wheel]
packages = ["pact_cc"]
